--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="style/index.css">
   <script src="scripts/index.js" type="module"></script>
+  <script src="scripts/masonry.pkgd.min.js" defer></script>
 </head>
 
 <body>
@@ -20,9 +21,7 @@
   </header>
   <main class="main">
     <section class="gallery">
-      <div class="container gallery__wrapper">
-        <ul class="grid" style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 30px;"></ul>
-      </div>
+      <div class="container gallery__wrapper"></div>
     </section>
   </main>
 </body>
